# MSProjectXMLValidator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate.py
.github/workflows/: auto-pr.yml
docs/: MSProjectXMLRules.md  implementation.md  msproject_validator.md
msproject_validator/: README.md  __init__.py  config.py  core.py  repairs.py  reporting.py  utils.py  validators.py
tests/: test_repairs.py
